--- a/index.html
+++ b/index.html
@@ -1,7 +1,44 @@
 ---
 layout: default
 ---
+  <div class="home">
+	  <div>
+		<h1>Blog Name Here</h1>
+		<p>A slogan or short description of the blog and it's content would go here. Maybe a quote or link or something.</p>
+	  </div>
 
-  <h2>Main Page</h2>
-
-  Main content goes here.
+	  <div>
+		<img src="/assets/pattern.png" width="600">
+	  </div>
+  </div>
+  
+  <div>
+		<div class="recent">
+		  <h3>Recent Posts</h3>
+		</div>
+		<hr>
+	  
+	  <div class="blogposts">
+		  {% for post in site.posts limit:3 %}
+		  <div class="postcard">
+			  <a href="{{ post.url }}">
+				<img src="{{ post.thumbnail }}">
+			  </a>
+			  <div class="posttitle">
+				  <a href="{{ post.url }}">
+					{{ post.title }}
+				  </a>
+				  <div class="posttags">
+					  {% for tag in post.tags %}
+					  <a href="{{ site.baseurl }}/tags#{{ tag }}">{{ tag }}</a>
+					  {% endfor %}
+				  </div>
+				  <p class="postdate">{{ post.date | date: "%m/%d/%Y"}}</p>
+			  </div>
+		  </div>
+		  {% endfor %}
+  </div>
+	  <div class="allposts">
+		<a href="">View All Posts</a>
+	  </div>
+  </div>
