--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 	  </div>
 
 	  <div>
-		<img src="/assets/pattern.png" width="600">
+		<img src="{{ site.baseurl }}/assets/pattern.png" width="600">
 	  </div>
   </div>
   
