--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@ layout: default
 	  <div class="blogposts">
 		  {% for post in site.posts limit:3 %}
 		  <div class="postcard">
-			  <a href="{{ site.baseurl }}/{{ post.url }}">
-				<img src="{{ site.baseurl }}/{{ post.thumbnail }}">
+			  <!--<a href="{{ site.baseurl }}/{{ post.url }}">-->
+			  <a href="{{ post.url }}">
+				<!--<img src="{{ site.baseurl }}/{{ post.thumbnail }}">-->
+				<img src="{{ post.thumbnail }}">
 			  </a>
 			  <div class="posttitle">
-				  <a href="{{ site.baseurl }}/{{ post.url }}">
+				  <!--<a href="{{ site.baseurl }}/{{ post.url }}">-->
+				  <a href="{{ post.url }}">
 					{{ post.title }}
 				  </a>
 				  <div class="posttags">
@@ -39,6 +42,6 @@ layout: default
 		  {% endfor %}
   </div>
 	  <div class="allposts">
-		<a href="">View All Posts</a>
+		<a href="/blog">View All Posts</a>
 	  </div>
   </div>
