--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@ layout: default
 		  {% endfor %}
   </div>
 	  <div class="allposts">
-		<a href="/blog">View All Posts</a>
+		<a href="{{ site.baseurl }}/blog">View All Posts</a>
 	  </div>
   </div>
