--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: default
 ---
   <div class="home">
 	  <div>
-		<h1>Blog Name Here</h1>
-		<p>A slogan or short description of the blog and it's content would go here. Maybe a quote or link or something.</p>
+		<h1>Welcome to uncombo</h1>
+		<p>Your source for gaming hardware and software reviews, guides, impressions, and more.</p>
 	  </div>
 
 	  <div>
