--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
   <div class="home">
 	  <div>
-		<h1 class="alt-color">Welcome to uncombo</h1>
+		<h1 class="alt-color"><span class="thin">Welcome to</span> uncombo</h1>
 		<p>Your source for gaming hardware and software reviews, guides, impressions, and more.</p>
 	  </div>
 
