--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
   <div class="home">
 	  <div>
 		<h1 class="alt-color"><span class="thin">Welcome to</span> uncombo</h1>
-		<p>Your source for gaming hardware and software reviews, guides, impressions, and more.</p>
+		<p>Your source for gaming hardware and software reviews, guides, first impressions, and more.</p>
 	  </div>
 
 	  <div>
