--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ layout: default
 		  <div class="postcard">
 			  <a href="{{ site.baseurl }}/{{ post.url }}">
 			  <!--<a href="{{ post.url }}">-->
-				<img src="{{ site.baseurl }}/{{ post.thumbnail }}">
+				<img src="{{ site.baseurl }}/{{ post.thumbnail }}" alt="{{ post.alt }}">
 				<!--<img src="{{ post.thumbnail }}">-->
 			  </a>
 			  <div class="posttitle">
